--- a/hengxin/myface.html
+++ b/hengxin/myface.html
@@ -11,13 +11,36 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav title">
+			
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" 
 			style="color: white; "></a>
+			<a id="openMenu"class="mui-icon mui-icon-right-nav mui-pull-right"
+			style="color: white; margin-top: 0px; ">...</a>
 			<h1 class="mui-title title-color">个人头像</h1>
 		</header>
 			
 		<div class="mui-content">
 			<img id="img_myface" src="./image/bg.png"/>
+			<div id="sheet_myface" class="mui-popover mui-popover-bottom mui-popover-action ">
+				<!-- 可选择菜单 -->
+				<ul class="mui-table-view">
+				  <li class="mui-table-view-cell">
+					<a id="link_choosePhoto" href="#">选择照片</a>
+				  </li>
+				  <li class="mui-table-view-cell">
+					<a id="link_savePhoto" href="#">下载照片</a>
+				  </li>
+				</ul>
+				<!-- 取消菜单 -->
+				<ul class="mui-table-view">
+				  <li class="mui-table-view-cell">
+					<a href="#sheet_myface"><b>取消</b></a>
+				  </li>
+				</ul>
+			</div>
+			
+			
+			
 		</div>
 		
 		<script src="js/app.js"></script>
@@ -25,24 +48,42 @@
 		<script type="text/javascript">
 			mui.init()
 			
-			mui.mui.plusReady(function () {
+			mui.plusReady(function () {
 			    
 			var user = app.getUserGlobalInfo();
 			var img_myface =document.getElementById("img_myface");
 			
 			
-			if (user!=nullapp.isNotNull(faceImage)){
+			if (user!=null){
 				var faceImage = user.faceImage;
 				if(app.isNotNull(faceImage)){
 					var img_myface =document.getElementById("img_myface");
 					img_my_face.src = app.imgServerUrl+faceImage;
 				}
+				}
 				//获取手机端可见屏幕
 				var imgWidth = document.body.clientWidth;
 				img_myface.width= imgWidth;
 				img_myface.height= imgWidth;
+				//绑定选择菜单
+			var	openMenu = document.getElementById("openMenu");
+			openMenu.addEventListener("tap",function(){
+			
+				mui("#sheet_myface").popover("toggle");
+			});
+			//TO 下载照片 和 选择照片 
+			var link_choosePhoto= document.getElementById("link_choosePhoto");
+			link_choosePhoto.addEventListener("tap", function(){
+				mui.openWindow("plugin/v3.1.6/myface-uploader.html","myface-uploader.html");
+				mui("#sheet_myface").popover("toggle");
+			});
+			var save_choosePhoto= document.getElementById("link_savePhoto");
+			link_savePhoto.addEventListener("tap", function(){
 				
 			});
+			
+		});
+		
 			
 		</script>
 	</body>
