Ready to develop Chatting Function

--- a/hengxin/hengxin-discover.html
+++ b/hengxin/hengxin-discover.html
@@ -36,7 +36,7 @@
 				</li>
 			</ul>
 			<ul class="mui-table-view">
-				<li class="mui-table-view-cell mui-media">
+				<li id="li_scanme"class="mui-table-view-cell mui-media">
 					
 						<img class="mui-media-object mui-pull-left" src="image/scanscan.png" style="max-width:
 						 24px; height: 24px;" >
@@ -57,6 +57,11 @@
 			    var li_add_friends = document.getElementById("li_add_friends");
 				li_add_friends.addEventListener("tap",function(){
 					mui.openWindow("searchfriends.html","searchfriends.html");
+				});
+				
+				var li_scanme = document.getElementById("li_scanme");
+				li_scanme.addEventListener("tap",function(){
+					mui.openWindow("scanme.html","scanme.html");
 				});
 			});
 		</script>
